[gd_scene load_steps=4 format=3 uid="uid://b0kmegunidh5l"]

[ext_resource type="Script" path="res://libs/gui/main_gui.gd" id="1_g1tev"]
[ext_resource type="PackedScene" uid="uid://hrtt5klpd3fp" path="res://libs/gui/interfaces/console/console.tscn" id="2_xrvn5"]
[ext_resource type="Script" path="res://libs/gui/modules/control_bar.gd" id="3_j8q6e"]

[node name="MainGui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( "1_g1tev" )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.113725, 0.133333, 0.160784, 1)

[node name="Status" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -457.0
offset_right = -8.0
offset_bottom = 32.0
grow_horizontal = 0
text = "协议后端:Mirai | 已连接 | Bot ID:1234567898"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_layout_mode = 1

[node name="Console" parent="." instance=ExtResource( "2_xrvn5" )]
offset_top = 33.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="ControlBar" type="HBoxContainer" parent="."]
offset_left = 4.0
offset_right = 604.0
offset_bottom = 33.0
script = ExtResource( "3_j8q6e" )

[node name="MainMenu" type="MenuButton" parent="ControlBar"]
offset_right = 56.0
offset_bottom = 33.0
size_flags_vertical = 3
text = "主菜单"
alignment = 0
expand_icon = true
item_count = 3
popup/item_0/text = "检查更新"
popup/item_0/id = 0
popup/item_1/text = "打开内部日志目录"
popup/item_1/id = 1
popup/item_2/text = "退出"
popup/item_2/id = 2

[node name="ConsoleMenu" type="MenuButton" parent="ControlBar"]
offset_left = 60.0
offset_right = 116.0
offset_bottom = 33.0
size_flags_vertical = 3
text = "控制台"
alignment = 0
expand_icon = true
item_count = 2
popup/item_0/text = "清空控制台"
popup/item_0/id = 0
popup/item_1/text = "打开控制台日志目录"
popup/item_1/id = 1

[node name="PluginMenu" type="MenuButton" parent="ControlBar"]
offset_left = 120.0
offset_right = 160.0
offset_bottom = 33.0
size_flags_vertical = 3
text = "插件"
alignment = 0
expand_icon = true
item_count = 4
popup/item_0/text = "插件市场"
popup/item_0/id = 0
popup/item_1/text = "插件管理器"
popup/item_1/id = 1
popup/item_2/text = "重载所有插件"
popup/item_2/id = 2
popup/item_3/text = "打开插件文件夹"
popup/item_3/id = 3

[node name="AdapterMenu" type="MenuButton" parent="ControlBar"]
offset_left = 164.0
offset_right = 236.0
offset_bottom = 33.0
size_flags_vertical = 3
text = "协议后端"
alignment = 0
expand_icon = true
item_count = 4
popup/item_0/text = "打开配置文件"
popup/item_0/id = 0
popup/item_1/text = "重新启动"
popup/item_1/id = 1
popup/item_2/text = "状态信息"
popup/item_2/id = 2
popup/item_3/text = "打开协议后端文件夹"
popup/item_3/id = 3

[node name="HelpMenu" type="MenuButton" parent="ControlBar"]
offset_left = 240.0
offset_right = 280.0
offset_bottom = 33.0
size_flags_vertical = 3
text = "帮助"
alignment = 0
expand_icon = true
item_count = 8
popup/item_0/text = "在线教程"
popup/item_0/id = 0
popup/item_1/text = "插件API文档"
popup/item_1/id = 1
popup/item_2/text = "问与答"
popup/item_2/id = 2
popup/item_3/text = "提交问题/建议"
popup/item_3/id = 3
popup/item_4/text = "提交API文档反馈"
popup/item_4/id = 4
popup/item_5/text = "官方群聊"
popup/item_5/id = 5
popup/item_6/text = "官方社区"
popup/item_6/id = 6
popup/item_7/text = "项目源码"
popup/item_7/id = 7

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true
timeout = 10.0
